# jointskeleton

./: .gitignore  README.md  compile_commands.json  compile_flags.txt  meson.build
include/: jointskeleton.h
src/: GlRenderer.cpp  GlRenderer.h  GuiApp.cpp  GuiApp.h  GuiWindow.cpp  GuiWindow.h  main.cpp  meson.build
subprojects/: glimmer.wrap
subprojects/packagefiles/glimmer/: meson.build
